--- a/VulcanizationAPIFront/src/app/app.component.html
+++ b/VulcanizationAPIFront/src/app/app.component.html
@@ -1,25 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-inverse navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" routerLink="">Vulcanization</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" routerLink="">Home</a>
+        <a class="nav-link active" aria-current="page" routerLink="vulcanizations">Vulcanizations</a>
+      </div>
     </div>
+    <a *ngIf="!isUserAuthenticated()" routerLink="login" class="btn btn-dark navbar-btn login-btn" role="button" aria-pressed="true">Sign In</a>
+    <a *ngIf="isUserAuthenticated()" (click)="logOut()" class="btn btn-dark navbar-btn login-btn" role="button" aria-pressed="true">Logout</a>
   </div>
 </nav>
+
 <router-outlet></router-outlet>
